update deps: remove ably, stable deps + gthread start

--- a/render.yaml
+++ b/render.yaml
@@ -9,7 +9,7 @@ services:
     buildCommand: |
       pip install --upgrade pip
       pip install -r requirements.txt
-    startCommand: gunicorn -k gevent -w 1 -b 0.0.0.0:10000 src.main:app
+    startCommand: gunicorn -w 1 -k gthread --threads 8 -t 120 src.main:app
     healthCheckPath: /api/health
     autoDeploy: true
     envVars:
