--- a/render.yaml
+++ b/render.yaml
@@ -17,7 +17,6 @@ services:
         value: 3.11.9
       - key: SECRET_KEY
         value: dev-key
-        sync: false
       - key: ADMIN_USER
         value: admin
       - key: ADMIN_PASS
@@ -32,21 +31,20 @@ services:
         value: 587
       - key: EMAIL_HOST_USER
         value: dmsmehedis@gmail.com
-      - key: gedvoprpoiluruzd
+      - key: EMAIL_HOST_PASSWORD
         sync: false
       - key: EMAIL_TO
         value: dmsmehedis@gmail.com
 
   # -------- Frontend: Static --------
- # -------- Frontend: Static --------
--  type: static
--  name: dms-frontend
--  repo: https://github.com/mehedi-88/dms-mehedi-portfolio.git
--  branch: main
--  buildCommand: ""          # build দরকার নেই
--  staticPublishPath: static # কারন index.html -> static/index.html
--  autoDeploy: true
--  headers:
-     path: /*
-      name: Cache-Control
-      value: public, max-age=60
+  - type: static
+    name: dms-frontend
+    repo: https://github.com/mehedi-88/dms-mehedi-portfolio.git
+    branch: main
+    buildCommand: ""           # কোনো build দরকার নেই
+    staticPublishPath: static  # index.html এই ফোল্ডারে আছে
+    autoDeploy: true
+    headers:
+      - path: /*
+        name: Cache-Control
+        value: public, max-age=60
